--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-firebase/app": "^19.0.1",
+    "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
     "react-native": "0.73.5"
   },
