--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@pusher/pusher-websocket-react-native": "^1.3.1",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-native-firebase/app": "^19.0.1",
     "pusher-js": "^8.4.0-rc2",
